# RaftBitcask

./: ABSOLUTE_FINAL_SUCCESS.md  BACKUP_FIXES_COMPLETE.md  BACKUP_TEST_FIX_COMPLETE.md  CMakeLists.txt  CMakeLists_fixed.txt  CMakeLists_offline.txt  COMPILATION_ERROR_FIXES.md  COMPILATION_SUCCESS_FINAL.md  COMPILE_FIX_GUIDE.md  COMPLETE_BUILD_AND_TEST.sh  COMPLETE_BUILD_GUIDE.md  COMPLETE_FIX_AND_TEST_GUIDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_MANUAL_BUILD_GUIDE.md  COMPLETE_MANUAL_GUIDE.md  COMPLETE_MODULE_MANUAL_TESTING.md  COMPLETE_SUCCESS_FINAL.md  COMPLETE_WORKING_SOLUTION.md  COMPREHENSIVE_BACKUP_AND_MERGE_FIXES.md  COMPREHENSIVE_FEATURE_COMPARISON.md  COMPREHENSIVE_TEST_FIXES.md  CRITICAL_DATA_CORRUPTION_FIX.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_SUMMARY.md  DEVELOPMENT.md  FINAL_ALL_ERRORS_FIXED.md  FINAL_BUILD_SUCCESS_REPORT.md  FINAL_COMPILATION_GUIDE.md  FINAL_COMPILATION_SUCCESS.md  FINAL_COMPILATION_SUCCESS_ROUND_8.md  FINAL_COMPLETE_FIXES_SUMMARY.md  FINAL_COMPLETE_FIX_GUIDE.md  FINAL_COMPLETE_IMPLEMENTATION_REPORT.md  FINAL_COMPLETE_MODULE_IMPLEMENTATION.md  FINAL_COMPLETE_REPORT.md  FINAL_COMPLETE_SOLUTION.md  FINAL_COMPLETE_STATUS.md  FINAL_COMPREHENSIVE_FIX.md  FINAL_FEATURE_COMPARISON.md  FINAL_FIX_REPORT.md  (+93 more)
examples/: basic_operations.cpp  complete_server.cpp  http_server_example.cpp  redis_server_example.cpp  rpc_server_example.cpp
include/bitcask/: art_index.h  bitcask.h  bplus_tree_index.h  common.h  data_file.h  db.h  http_server.h  index.h  io_manager.h  log_record.h  mmap_io.h  options.h  redis_data_structure.h  redis_server.h  rpc_server.h  skiplist_index.h  test_utils.h  utils.h
local_gtest/include/gmock/: gmock.h
local_gtest/include/gtest/: gtest.h
local_gtest/src/: gtest_main.cpp
scripts/: build_and_test.sh  demo_individual_tests.sh  install_deps.sh  run_individual_tests.sh
src/: art_index.cpp  art_index_complete.cpp  art_index_fixed.cpp  bplus_tree_index.cpp  data_file.cpp  db.cpp  http_server.cpp  index.cpp  io_manager.cpp  iterator.cpp  log_record.cpp  mmap_io.cpp  redis_data_structure.cpp  redis_server.cpp  rpc_server.cpp  skiplist_index.cpp  test_utils.cpp  utils.cpp  write_batch.cpp
tests/: test_main.cpp
tests/benchmark_tests/: benchmark_test.cpp
tests/integration_tests/: integration_test.cpp
tests/unit_tests/: test_advanced_index.cpp  test_art_index.cpp  test_backup.cpp  test_data_file.cpp  test_db.cpp  test_http_server.cpp  test_index.cpp  test_io_manager.cpp  test_iterator.cpp  test_log_record.cpp  test_merge.cpp  test_mmap_io.cpp  test_redis.cpp  test_test_utils.cpp  test_write_batch.cpp
